# redshift-query-executor

./: README.md  pyproject.toml  run.py
redshift_query_executor/: constants.py  main.py  redshift_connection.py
